--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			
 			            			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
-<img class="pure-img-responsive" src="img/logotce.png" >
+<img class="pure-img-responsive" src="img/tcelogo1.png" >
  </div> </div>
         </div>
 
@@ -153,11 +153,11 @@
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/logotce1.png" >
+	<img class="pure-img-responsive" src="www.cateringrepair.co.uk/img/logotce1.png" >
 			
 			
 			<div class="test" align="center" >
-<a href="tel:07905508684">  <img src="img/callbutton.png"></a>
+<a href="tel:07905508684">  <img src="www.cateringrepair.co.uk/img/callbutton.png"></a>
 <br>
 <a href="tel:07905508684">07905508684</a>
 </div>
