--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			
 			            			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
-<img class="pure-img-responsive" src="img/tcelogo1.png" >
+<img class="pure-img-responsive" src="/img/tcelogo1.png" >
  </div> </div>
         </div>
 
@@ -153,7 +153,7 @@
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/logotce1.png" >
+	<img class="pure-img-responsive" src="/img/logotce1.png" >
 			
 			
 			<div class="test" align="center" >
