--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
 	Our staff have worked as catering engineers for major appliance manufacturers, national chains of food suppliers and local government agencies.
 	</p>
 	
- 
+ 	<div class="pure-g" >
+
 	<img class="pure-img-responsive" src="/img/logotce1.png" >
-			
+					</div>
+
 			
 			<div class="test" align="center" >
 <a href="tel:07905508684">  <img src="/img/callbutton.png"></a>
