--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	<div class="pure-g" >
 	
 			<div class="pure-u-1-5"  >
-		<img class="pure-img-responsive" src="img/gassafe101.png" >
+		<img class="pure-img-responsive" src="img/logotce1.png" >
 		</div> 
 		<div class="pure-u-4-5"  >
 		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
@@ -154,7 +154,7 @@
 	
  	<div class="pure-g" >
 
-	<img class="pure-img-responsive" src="/img/logotce1.png" >
+	<img class="pure-img-responsive" src="img/logotce1.png" >
 					</div>
 
 			
