--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	<div class="pure-g" >
 	
 			<div class="pure-u-1-5"  >
-		<img class="pure-img-responsive" src="img/logotce1.png" >
+		<img class="pure-img-responsive" src="img/gassafe101.png" >
 		</div> 
 		<div class="pure-u-4-5"  >
 		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
@@ -152,14 +152,12 @@
 	Our staff have worked as catering engineers for major appliance manufacturers, national chains of food suppliers and local government agencies.
 	</p>
 	
- 	<div class="pure-g" >
-
-	<img class="pure-img-responsive" src="img/logotce1.png" >
-					</div>
-
+ 
+	<img class="pure-img-responsive" src="img/gassafe101.png" >
+			
 			
 			<div class="test" align="center" >
-<a href="tel:07905508684">  <img src="/img/callbutton.png"></a>
+<a href="tel:07905508684">  <img src="img/callbutton.png"></a>
 <br>
 <a href="tel:07905508684">07905508684</a>
 </div>
