7pg servcontract home menu not TCE

--- a/otherrepair.html
+++ b/otherrepair.html
@@ -57,7 +57,7 @@
             </ul>
         </div>
     </div>
-	
+
     <div id="main">
         <div class="header">
 			
@@ -76,42 +76,65 @@
         <div class="content">
 
 <div class="test2" align="center" >
-<p>
-For an appointment or quote for a Gas Safety Certificate
-</p>
-<p>
+
 <a href="tel:+447810252231">  <img src="img/callbutton.png"></a>
+
+<br>
+...to get your appliance repaired now
 <br>
 <a href="tel:+447810252231">07810252231</a>
-<p>
 </div>
 
-	<div class="pure-g" >
-	
-			<div class="pure-u-1-5"  >
-		<img class="pure-img-responsive" src="img/gassafe101.png" >
+            <h2 class="content-subhead">Catering Appliance Repair</h2>
+			            <p>
+
+			     Our aim is to have your kitchen equipment working perfectly and as soon as possible.  We repair all the major brands including Blue Seal, Buffalo, Classeq, Falcon, Hobart, Lincat, Moorwood Vulcan, Rational, Parry, Prodis, Valentine, Winterhalter .  We have repaired nearly every kind of appliance you can have in your kitchen.   
+					</p>
+
+
+
+				<div class="pure-g" >
+			<div class="pure-u-1-2"  >
+		Dishwashers<br>
+				Hobart Mixers<br>
+				Pasta Cookers<br>
+		Gas Interlock Systems
 		</div> 
-		<div class="pure-u-4-5"  >
-		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
-		
+		<div class="pure-u-1-2"  >
+		Oven Ranges<br>
+		Steamers<br>
+		Chargrills<br>
+		Grills
+		</div>
 		</div>
 
-	</div>		
-	
-            <h2 class="content-subhead">Gas Safety Certificate </h2>
+					</p>
             <p>
-			     All commercial catering premises are required to have a valid Gas Safety Certificate.  This includes Schools, Hospitals, Pubs, Restaurants, Cafes, Hotels and any location which is using gas appliances to prepare food for members of the public. After each inspection by a qualified catering engineer, a certificate can be issued which is valid for one year. 
+
+We work at all kinds of premises, including:
 			</p>
-			<p>
-				 The gas safety check covers the inspection of each gas appliance in the kitchen, to ensure that the installation is working correctly and is not a danger to the customers or the staff.  Only Companies and Engineers who are on the Gas Safe Register can legally perform an inspection and issue a gas certificate.  
-				 </p>
-			<p>
-				
-				 We issue a report so that your business is safe and legal, and will satisfy Insurance Companies, the Health and Safety Executive (HSE) or Environmental Health Officers (EHOs). 
-			 </p>
 			
+				<div class="pure-g" >
+	
+			<div class="pure-u-1-2"  >
+		Cafes<br>
+		Hotels<br>
+		Pubs<br>
+		Restaurants
+		</div> 
+		<div class="pure-u-1-2"  >
+		Community Centres<br>
+		Hospitals<br>
+		Nursing Homes<br>
+		Schools
+		
+		</div>
+		</div>
+		
+	 
 			 <h2 class="content-subhead">Coverage Area</h2>
             <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan</p>
+			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
 <img class="pure-img-responsive" src="img/coveragemaparea8crop.png" >
@@ -126,10 +149,18 @@ For an appointment or quote for a Gas Safety Certificate
                 Our team is experienced in servicing and repairing ovens, glasswashers, fryers, griddles, mixers and every other kind of commercial kitchen appliance.
 				We have worked as catering engineers for major manufacturers, national chains of food suppliers, and serviced many smaller local businesses.
             </p>
-			
 
+	<div class="pure-g" >
+	
+			<div class="pure-u-1-5"  >
+		<img class="pure-img-responsive" src="img/gassafe101.png" >
+		</div> 
+		<div class="pure-u-4-5"  >
+		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
+		
+		</div>
 
-
+	</div>		
 	
 	<p>
 	Services supplied by Thompsons Catering Engineers.  
@@ -141,7 +172,7 @@ For an appointment or quote for a Gas Safety Certificate
 			
 			<div class="test" align="center" >
 			<p>
-For your Gas Safety Certificate
+Get your equipment fixed today
 </p>
 <a href="tel:+447810252231">  <img src="img/callbutton.png"></a>
 <br>
@@ -149,9 +180,10 @@ For your Gas Safety Certificate
 </div>
 
 <br>
+	<img class="pure-img-responsive" src="img/logobox1.jpg" >
 
-<img class="pure-img-responsive" src="img/logobox1.jpg" >
-		
+
+	
         </div>
     </div>
 </div>
