--- a/servicecontract.html
+++ b/servicecontract.html
@@ -77,41 +77,42 @@
 
 <div class="test2" align="center" >
 <p>
-For an appointment or quote for a Gas Safety Certificate
+Arrange your service contract
 </p>
-<p>
 <a href="tel:+447810252231">  <img src="img/callbutton.png"></a>
 <br>
 <a href="tel:+447810252231">07810252231</a>
-<p>
 </div>
 
-	<div class="pure-g" >
-	
-			<div class="pure-u-1-5"  >
-		<img class="pure-img-responsive" src="img/gassafe101.png" >
-		</div> 
-		<div class="pure-u-4-5"  >
-		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
-		
-		</div>
-
-	</div>		
-	
-            <h2 class="content-subhead">Gas Safety Certificate </h2>
+            <h2 class="content-subhead">Service Contract Advantages</h2>
             <p>
-			     All commercial catering premises are required to have a valid Gas Safety Certificate.  This includes Schools, Hospitals, Pubs, Restaurants, Cafes, Hotels and any location which is using gas appliances to prepare food for members of the public. After each inspection by a qualified catering engineer, a certificate can be issued which is valid for one year. 
-			</p>
-			<p>
-				 The gas safety check covers the inspection of each gas appliance in the kitchen, to ensure that the installation is working correctly and is not a danger to the customers or the staff.  Only Companies and Engineers who are on the Gas Safe Register can legally perform an inspection and issue a gas certificate.  
-				 </p>
-			<p>
-				
-				 We issue a report so that your business is safe and legal, and will satisfy Insurance Companies, the Health and Safety Executive (HSE) or Environmental Health Officers (EHOs). 
+			     A maintenance contract gives you peace of mind, keeps your costs under control and a fast response time.  If you have any problems with your equipment, a quick  phone call and we can come and repair your appliance, and your business can keep on making money. We repair all the major brands including Blue Seal, Falcon, Hobart, Lincat,  Moorwood Vulcan and Rational.  We can service combi-ovens, dishwashers, glasswashers, grills, mixers and ovens. We work at all kinds of premises such as Bars, Cafes, Community Centres, Hospitals, Hotels, Pubs, Restaurants and Schools. 
 			 </p>
 			
+			<h2 class="content-subhead">Maintenance Contract Types</h2>
+            <p>
+			     We offer three types of contracts:
+			 </p>
+<ul>
+  <li type="square">Inspection & Gas Safety Check</li>
+  <li type="square">Parts, Inspection, and Check </li>
+
+  <li type="square">Fully Comprehensive</li>
+</ul>
+<p>			 
+An inspection contract includes an annual inspection of all your kitchen appliances, with recommendations to keep your equipment in the best condition. It also includes an annual gas safety check and certificate to keep your business legal and insured.
+</p>	
+	
+<p>			 
+A parts contract includes all of the above, and covers the costs of any parts required during the year.
+</p>	
+<p>			 
+A fully comprehensive contract guarantees that all of your equipment is fully working, all the costs of parts and labour are covered by your monthly contract payment.  This gives you a fixed and predictable amount to pay each month.
+</p>	
+
 			 <h2 class="content-subhead">Coverage Area</h2>
             <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan</p>
+			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
 <img class="pure-img-responsive" src="img/coveragemaparea8crop.png" >
@@ -129,7 +130,17 @@ For an appointment or quote for a Gas Safety Certificate
 			
 
 
+	<div class="pure-g" >
+	
+			<div class="pure-u-1-5"  >
+		<img class="pure-img-responsive" src="img/gassafe101.png" >
+		</div> 
+		<div class="pure-u-4-5"  >
+		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
+		
+		</div>
 
+	</div>		
 	
 	<p>
 	Services supplied by Thompsons Catering Engineers.  
@@ -141,7 +152,7 @@ For an appointment or quote for a Gas Safety Certificate
 			
 			<div class="test" align="center" >
 			<p>
-For your Gas Safety Certificate
+Get your equipment fixed today
 </p>
 <a href="tel:+447810252231">  <img src="img/callbutton.png"></a>
 <br>
@@ -150,7 +161,8 @@ For your Gas Safety Certificate
 
 <br>
 
-<img class="pure-img-responsive" src="img/logobox1.jpg" >
+	<img class="pure-img-responsive" src="img/logobox1.jpg" >
+
 		
         </div>
     </div>
