--- a/glasswasherrepair.html
+++ b/glasswasherrepair.html
@@ -42,10 +42,9 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#">TCE</a>
+            <a class="pure-menu-heading" href="index.html">HOME</a>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="gascertificates.html" class="pure-menu-link">Gas Certificate</a></li>
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
                     <a href="ovenrepair.html" class="pure-menu-link">Oven Repair</a>
@@ -158,7 +157,7 @@ We work at all kinds of commercial premises, including:
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/logotce1.png" >
+	<img class="pure-img-responsive" src="img/logotce.png" >
 			
 			
 			<div class="test" align="center" >
@@ -172,10 +171,9 @@ Get your glasswasher fixed today
 
 <br>
 
-<div class="pure-g" >
-<div class="pure-u-1-2"  >
-<img class="pure-img-responsive" src="img/1920rationaloven.jpg" >
- </div> </div>
+<img class="pure-img-responsive" src="img/logobox1.jpg" >
+
+
 		
         </div>
     </div>
