--- a/index.html
+++ b/index.html
@@ -42,20 +42,15 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#">TCE</a>
+            <a class="pure-menu-heading" href="index.html">HOME</a>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="gascertificates.html" class="pure-menu-link">Gas Certificate</a></li>
-
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
                     <a href="ovenrepair.html" class="pure-menu-link">Oven Repair</a>
                 </li>
-
                 <li class="pure-menu-item"><a href="fryerrepair.html" class="pure-menu-link">Fryer Repair</a></li>
-		<li class="pure-menu-item"><a href="grillrepair.html" class="pure-menu-link">Grill Repair</a></li>
-				<li class="pure-menu-item"><a href="dishwasherrepair.html" class="pure-menu-link">Dishwasher Repair</a></li>
-				<li class="pure-menu-item"><a href="mixerrepair.html" class="pure-menu-link">Mixer Repair</a></li>
+		<li class="pure-menu-item"><a href="glasswasherrepair.html" class="pure-menu-link">Glasswasher Repair</a></li>
 				<li class="pure-menu-item"><a href="otherrepair.html" class="pure-menu-link">Other Repairs</a></li>
 		
 				<li class="pure-menu-item"><a href="servicecontract.html" class="pure-menu-link">Service Contracts</a></li>
@@ -74,7 +69,7 @@
 			
 			            			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
-<img class="pure-img-responsive" src="/img/logotce2.png" >
+<img class="pure-img-responsive" src="img/logotce.png" >
  </div> </div>
         </div>
 
@@ -91,7 +86,7 @@
 </div>
 
  			            <h2 class="content-subhead">Repairs</h2>
-            <p> We repair Falcon Ovens, Lincat Fryers, Rational Combi Ovens, Parry Fryers, Hobart Mixers, Salamander Grills, and Classeq & Winterhalter Dishwashers.  Through many years of experience, we have serviced and maintained every one of the commercial catering brands - both big and small. We pride ourselves on providing a reliable, prompt and efficient service for all of our customers in the North West.</p>
+            <p> We repair Falcon Ovens, Lincat Fryers, Rational Combi Ovens, Parry Fryers, Hobart Mixers, Salamander-style Grills, and Classeq & Winterhalter Dishwashers.  Through many years of experience, we have serviced and maintained every one of the commercial catering brands - both big and small. We pride ourselves on providing a reliable, prompt and efficient service for all of our customers in the North West.</p>
 
  
  			            <h2 class="content-subhead">Coverage Area</h2>
@@ -117,7 +112,7 @@
 			
  
   			<h2 class="content-subhead">Service Contracts</h2>
-            <p> We can provide a variety of service contracts based on your needs.  A regular payment means you can pay on a monthly basis and potentially reduce your tax bill.  This is much better than having your equipment break down on you, leaving you with a big bill to pay.  Our contracts include - Parts only contracts, Parts and Labour, and fully comprehensive contracts for all types of commercial kitchens.</p>
+            <p> We can provide a variety of service contracts based on your needs.  A regular payment means you can pay on a monthly basis and potentially reduce your tax bill.  This is much better than having your equipment break down on you, leaving you with a big bill to pay.  Our contracts include - Inspection & service contracts, Parts only contracts, and Fully Comprehensive contracts for all types of commercial kitchens.</p>
 			
             <h2 class="content-subhead">CRB approved to work in Schools </h2>
             <p> All of our engineers are approved by the police to work around children in education or healthcare. They have received
@@ -153,7 +148,7 @@
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/gassafe101.png" >
+	<img class="pure-img-responsive" src="img/logotce.png" >
 			
 			
 			<div class="test" align="center" >
@@ -161,13 +156,11 @@
 <br>
 <a href="tel:07905508684">07905508684</a>
 </div>
+<br>
+	<img class="pure-img-responsive" src="img/logobox1.jpg" >
 
 
- 	 			<div class="pure-g" >
-			 <div class="pure-u-1-2"  >
-<img class="pure-img-responsive" src="img/1920rationaloven.jpg" >
- </div> </div>
-
+Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Manchester, UK
             <p>
 			<br>
 			Call 01616825860
