--- a/ovenrepair.html
+++ b/ovenrepair.html
@@ -42,27 +42,22 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#">TCE</a>
+            <a class="pure-menu-heading" href="index.html">HOME</a>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="gascertificates.html" class="pure-menu-link">Gas Certificate</a></li>
-
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
                     <a href="ovenrepair.html" class="pure-menu-link">Oven Repair</a>
                 </li>
-
                 <li class="pure-menu-item"><a href="fryerrepair.html" class="pure-menu-link">Fryer Repair</a></li>
-		<li class="pure-menu-item"><a href="grillrepair.html" class="pure-menu-link">Grill Repair</a></li>
-				<li class="pure-menu-item"><a href="dishwasherrepair.html" class="pure-menu-link">Dishwasher Repair</a></li>
-				<li class="pure-menu-item"><a href="mixerrepair.html" class="pure-menu-link">Mixer Repair</a></li>
+		<li class="pure-menu-item"><a href="glasswasherrepair.html" class="pure-menu-link">Glasswasher Repair</a></li>
 				<li class="pure-menu-item"><a href="otherrepair.html" class="pure-menu-link">Other Repairs</a></li>
 		
 				<li class="pure-menu-item"><a href="servicecontract.html" class="pure-menu-link">Service Contracts</a></li>
             </ul>
         </div>
     </div>
-
+	
     <div id="main">
         <div class="header">
 			
@@ -142,7 +137,7 @@ You need a range or oven repair now?
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/logotce1.png" >
+	<img class="pure-img-responsive" src="img/logotce.png" >
 			
 			
 			<div class="test" align="center" >
@@ -156,10 +151,8 @@ Get your equipment fixed today
 
 <br>
 
-<div class="pure-g" >
-<div class="pure-u-1-2"  >
-<img class="pure-img-responsive" src="img/1920rationaloven.jpg" >
- </div> </div>
+	<img class="pure-img-responsive" src="img/logobox1.jpg" >
+
 		
         </div>
     </div>
