title meta alt descriptions for 7 pages
hyphen urls

--- a/gascertificates.html
+++ b/gascertificates.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Gas Safety Certificates & Repairs for Restaurants, Schools, Pubs & Commercial Kitchens">
+<meta name="description" content="07810252231 Greater Manchester area. Gas Safe Registered Engineers. Fast & Reliable. Gas Safety Certificates & Checks. 20 years experience. Inspections, Maintenance and Repairs. Keep safe and legal">
 
-    <title>Repairs for Oven, Fryers, Grill and Dishwashers.  Gas Safety Certificates for Kitchens</title>
+
+    <title>Gas Safety Certificates for Commercial Kitchens. Bars, Cafes, Pubs, Schools, Restaurants, Hotels</title>
 
  <!--[if lte IE 8]>
 	<link rel="stylesheet" href="css/layouts/pure-min.css">
@@ -34,11 +35,6 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 		
 				</style>
     <!--<![endif]-->
-
-
-	
-
-
     
 </head>
 <body>
@@ -54,17 +50,14 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
     <div id="menu">
         <div class="pure-menu">
             <a class="pure-menu-heading" href="index.html">HOME</a>
-
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="gascertificates.html" class="pure-menu-link">Gas Certificate</a></li>
+                <li class="pure-menu-item"><a href="gas-certificates.html" class="pure-menu-link">Gas Certificate</a></li>
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
-                    <a href="ovenrepair.html" class="pure-menu-link">Oven Repair</a>
-                </li>
-                <li class="pure-menu-item"><a href="fryerrepair.html" class="pure-menu-link">Fryer Repair</a></li>
-		<li class="pure-menu-item"><a href="glasswasherrepair.html" class="pure-menu-link">Glasswasher Repair</a></li>
-				<li class="pure-menu-item"><a href="otherrepair.html" class="pure-menu-link">Other Repairs</a></li>
-		
-				<li class="pure-menu-item"><a href="servicecontract.html" class="pure-menu-link">Service Contracts</a></li>
+                <a href="oven-repair.html" class="pure-menu-link">Oven Repair</a></li>
+                <li class="pure-menu-item"><a href="fryer-repair.html" class="pure-menu-link">Fryer Repair</a></li>
+				<li class="pure-menu-item"><a href="glasswasher-repair.html" class="pure-menu-link">Glasswasher Repair</a></li>
+				<li class="pure-menu-item"><a href="other-repair.html" class="pure-menu-link">Other Repairs</a></li>
+				<li class="pure-menu-item"><a href="service-contract.html" class="pure-menu-link">Service Contracts</a></li>
             </ul>
         </div>
     </div>
