--- a/glasswasher-repair.html
+++ b/glasswasher-repair.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Gas Safety Certificates & Repairs for Restaurants, Schools, Pubs & Commercial Kitchens">
+	<meta name="description" content="07810252231 - Pub, Bars, Cafes, Restaurants & Hotels in North West. Reliable & Efficient. All types of Dishwashers & Glasswashers. 20 yrs experience.">
 
-    <title>Repairs for Oven, Fryers, Grill and Dishwashers.  Gas Safety Certificates for Kitchens</title>
+	for Pubs, Bars, Cafes, Restaurants & Hotels. 
+    <title>Glasswasher Repairs - Classeq, DC, Hobart, Winterhalter & more</title>
 
-
-
-
-    <!--[if lte IE 8]>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-        <link rel="stylesheet" href="/combo/1.18.13?/css/layouts/side-menu-old-ie.css">
-		   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
+ <!--[if lte IE 8]>
+	<link rel="stylesheet" href="css/layouts/pure-min.css">
+        <link rel="stylesheet" href="css/layouts/side-menu-old-ie.css">
+		    <link rel="stylesheet" href="css/layouts/grids-responsive-old-ie-min.css">
     <![endif]-->
-		
-<!--[if lt IE 9]>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
+	
+	<!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
 <![endif]-->
 
-
-
-        <!--[if gt IE 8]><!-->
-		<style>
+    <!--[if gt IE 8]><!-->
+<style>
 /*!
 Pure v0.6.0
 Copyright 2014 Yahoo! Inc. All rights reserved.
@@ -38,11 +34,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 
 		
 				</style>
-
-
-
     <!--<![endif]-->
-
+    
 </head>
 <body>
 
@@ -57,17 +50,14 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
     <div id="menu">
         <div class="pure-menu">
             <a class="pure-menu-heading" href="index.html">HOME</a>
-
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="gascertificates.html" class="pure-menu-link">Gas Certificate</a></li>
+                <li class="pure-menu-item"><a href="gas-certificates.html" class="pure-menu-link">Gas Certificate</a></li>
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
-                    <a href="ovenrepair.html" class="pure-menu-link">Oven Repair</a>
-                </li>
-                <li class="pure-menu-item"><a href="fryerrepair.html" class="pure-menu-link">Fryer Repair</a></li>
-		<li class="pure-menu-item"><a href="glasswasherrepair.html" class="pure-menu-link">Glasswasher Repair</a></li>
-				<li class="pure-menu-item"><a href="otherrepair.html" class="pure-menu-link">Other Repairs</a></li>
-		
-				<li class="pure-menu-item"><a href="servicecontract.html" class="pure-menu-link">Service Contracts</a></li>
+                <a href="oven-repair.html" class="pure-menu-link">Oven Repair</a></li>
+                <li class="pure-menu-item"><a href="fryer-repair.html" class="pure-menu-link">Fryer Repair</a></li>
+				<li class="pure-menu-item"><a href="glasswasher-repair.html" class="pure-menu-link">Glasswasher Repair</a></li>
+				<li class="pure-menu-item"><a href="other-repair.html" class="pure-menu-link">Other Repairs</a></li>
+				<li class="pure-menu-item"><a href="service-contract.html" class="pure-menu-link">Service Contracts</a></li>
             </ul>
         </div>
     </div>
@@ -79,111 +69,114 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 			</h1>
             <h2>for Commercial Kitchens</h2>
 			<h3>in the North West</h3>
-			<h3>Restaurants, Schools, Cafes & Pubs </h3>
+			<h3>Bars, Cafes, Pubs & Restaurants</h3>
 			
 			            			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
-<img class="pure-img-responsive" src="img/tcelogo.png" >
+<img class="pure-img-responsive" src="img/logotce.png" alt="Catering Repair Logo" >
  </div> </div>
         </div>
 
-        <div class="content">
-		
 
 
 
+<div class="content">
 
 <div class="test2" align="center" >
-<a href="tel:+447905508684">  <img src="img/callbutton.png"></a>
+
+<a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
+
 <br>
-<a href="tel:+447905508684">07905508684</a>
+...for a quote for a callout
+<br>
+
+<a href="tel:+447810252231">07810252231</a>
 </div>
 
- 			            <h2 class="content-subhead">Repairs</h2>
-            <p> We repair Falcon Ovens, Lincat Fryers, Rational Combi Ovens, Parry Fryers, Hobart Mixers, Salamander-style Grills, and Classeq & Winterhalter Dishwashers.  Through many years of experience, we have serviced and maintained every one of the commercial catering brands - both big and small. We pride ourselves on providing a reliable, prompt and efficient service for all of our customers in the North West.</p>
 
+
+            <h2 class="content-subhead">Glasswasher Repairs</h2>
+            <p>
+			      We repair all the major brands, including Classeq, DC, Hobart, Maidaid, Prodis and Winterhalter Glasswashers.  Our aim is to have your kitchen equipment working perfectly and as soon as possible. 
+We work at all kinds of commercial premises, including:
+			</p>
+			
+			
+				<div class="pure-g" >
+	
+			<div class="pure-u-1-2"  >
+					Bars<br>
+		Cafes<br>
+		Hotels<br>
+		Pubs<br>
+		Restaurants
+		</div> 
+		<div class="pure-u-1-2"  >
+		Community Centres<br>
+		Hospitals<br>
+		Nursing Homes<br>
+		Schools
+		
+		</div>
+		</div>
+		
+			
+			<h2 class="content-subhead">Glasswasher Problems</h2>
+            <p>
+			     Some of the common faults on glasswashers in commercial kitchens, which we can fix:
+			 </p>
+<ul>
+
+    <li type="square">Glasswasher is not washing properly</li>
+	   <li type="square">Water is not at correct temperature </li>
+	     <li type="square">Glasswasher does not drain</li>
+  <li type="square">Machine is overflowing</li>
  
- 			            <h2 class="content-subhead">Coverage Area</h2>
-            <p>We cover Greater Manchester and surrounding areas.  Including Bolton, Burnley, Huddersfield, Rochdale, Stockport and Wigan</p>
+
+  <li type="square">Glasswasher leaks</li>
+
+
+</ul>			 
+			 <h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan..</p>
+			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
-<img class="pure-img-responsive" src="img/coveragemaparea8crop.png" >
+<img class="pure-img-responsive" src="img/coveragemaparea8crop.png"  alt="Coverage Map - Manchester & North West" >
  </div> </div>
  
- 
- 			            <h2 class="content-subhead">Prices</h2>
-            <p>
-			     Call for a quote. Fixed prices. Special offers for local schools.  All of our engineers are based in or near the Greater Manchester area. 
-				 We are based in Manchester, which means we can provide better prices than national groups who Gas Safety Certificate £200 for up to six appliances in one kitchen, £30 for each additional appliance over that.
-				 
-			 </p>
 
- 
-            <h2 class="content-subhead">Gas Safety Certificate </h2>
-            <p>
-			     Our gas safe engineers are all on the Gas Safe Register.  We do annual gas safety checks for kitchens in schools, restaurants, pubs, hotels and any type of catering establishments or commercial kitchens and able to issue reports so that your business is safe and legal, and no problems from the Health and Safety Executive. 
-			 </p>
-			
- 
-  			<h2 class="content-subhead">Service Contracts</h2>
-            <p> We can provide a variety of service contracts based on your needs.  A regular payment means you can pay on a monthly basis and potentially reduce your tax bill.  This is much better than having your equipment break down on you, leaving you with a big bill to pay.  Our contracts include - Inspection & service contracts, Parts only contracts, and Fully Comprehensive contracts for all types of commercial kitchens.</p>
-			
-            <h2 class="content-subhead">CRB approved to work in Schools </h2>
-            <p> All of our engineers are approved by the police to work around children in education or healthcare. They have received
-                 CRB (Criminal Records Bureau) checks, which are now also known as DBS checks.
-            </p>
-
-			
 			
             <h2 class="content-subhead">Team Experience</h2>
             <p>
-                Our team is experienced in servicing and repairing ovens, combi-ovens, fryers, grills, dishwashers and every other kind of kitchen appliance.
-				We have worked as catering engineers for major manufacturers, national chains of food suppliers, and serviced many smaller local businesses.
+                Our team is experienced in servicing and repairing ovens, glasswashers, fryers, griddles, mixers and every other kind of commercial kitchen appliance.
+				We have worked as catering engineers for major manufacturers, national chains of food suppliers, and many smaller local businesses.
             </p>
 			
 
 
-	<div class="pure-g" >
 	
-			<div class="pure-u-1-5"  >
-		<img class="pure-img-responsive" src="img/gassafe101.png" >
-		</div> 
-		<div class="pure-u-4-5"  >
-		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
-		
-		</div>
-
-	</div>		
-	
-
 	<p>
 	Services supplied by Thompsons Catering Engineers.  
-	Our staff have worked as catering engineers for major appliance manufacturers, national chains of food suppliers and local government agencies.
 	</p>
 	
  
-	<img class="pure-img-responsive" src="img/tcelogo.png" >
+	<img class="pure-img-responsive" src="img/logotce.png" alt="Catering Repair Logo" >
 			
 			
 			<div class="test" align="center" >
-<a href="tel:07905508684">  <img src="img/callbutton.png"></a>
+			<p>
+Get your glasswasher fixed today
+</p>
+<a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
-<a href="tel:07905508684">07905508684</a>
+<a href="tel:+447810252231">07810252231</a>
 </div>
+
 <br>
-	<img class="pure-img-responsive" src="img/logobox1.jpg" >
 
+<img class="pure-img-responsive" src="img/logobox1.png"  alt="Rational Oven Hobart Mixer Classeq Dishwasher Logos" >  Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Manchester, UK
 
-Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Manchester, UK
-            <p>
-			<br>
-			Call 01616825860
-			Call 0161 6825860
-			Call 08001777433
-			Call +448001777433
-			Call 0800 1777433
-			Call +447810252231
-            </p>
 
 		
         </div>
@@ -228,7 +221,7 @@ Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Mancheste
 }(this, this.document));
 
 
-</script>
+</script><script>  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-84276044-1', 'auto'); ga('send', 'pageview');</script>
 
 </body>
 </html>
