--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="index.html">HOME</a>
+            <a class="pure-menu-heading" href="/">HOME</a>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="gas-certificates.html" class="pure-menu-link">Gas Certificate</a></li>
                 <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
@@ -133,9 +133,7 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 		All of our engineers are able to issue Annual Gas Safety Certificates for Commercial Catering and Kitchens.  They are Gas Safe Registered for both Natural Gas and LPG. Safety is one of our top priorities. 
 		
 		</div>
-
 	</div>		
-	
 
 	<p>
 	Services supplied by Thompsons Catering Engineers.  
@@ -150,6 +148,7 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <a href="tel:447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
 <a href="tel:447810252231">07810252231</a>
+Call 8am to 8pm from Monday to Sunday
 </div>
 <br>
 	<img class="pure-img-responsive" src="img/logobox1.png"  alt="Rational Oven Hobart Mixer Classeq Dishwasher Logos" >  Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Manchester, UK
