admin email 4 schema

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <a href="tel:447810252231">07810252231</a>
 <br>
 Call 8am to 8pm from Monday to Sunday
+<br>
+admin@cateringrepair.co.uk
 </div>
 <br>
 	<img class="pure-img-responsive" src="img/logobox1.png"  alt="Rational Oven Hobart Mixer Classeq Dishwasher Logos" >  Thompsons Catering Engineers, 15 Peach Bank House, Middleton, M24 1BG, Manchester, UK
