changed tel number n opening times to correct format

--- a/testindex.html
+++ b/testindex.html
@@ -85,8 +85,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <div class="test2" align="center">
 <a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button"/></a>
 <br/>
-<a itemprop=”telephone” href="tel:+447810252231">07810252231</a>
-
+<a href="tel:+447810252231">
+<span id="_telephone3" itemprop="telephone">07810252231</span></a>
 </div>
 
  			            <h2 class="content-subhead">Repairs</h2>
@@ -156,7 +156,7 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <a href="tel:447810252231">07810252231</a>
 <br>
 Call <span itemprop="openingHours" content="Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00">8am to 8pm from Monday to Sunday</span>
-<br>
+
 <span id="_email4" itemprop="email">admin@cateringrepair.co.uk</span>
 </div>
 <br/>
