remove quote to callout & repair

--- a/glasswasher-repair.html
+++ b/glasswasher-repair.html
@@ -84,16 +84,12 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <div class="test2" align="center" >
 
 <a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
-
 <br>
-...for a quote for a callout
+...for an engineer callout and repair
 <br>
 
 <a href="tel:+447810252231">07810252231</a>
 </div>
-
-
-
             <h2 class="content-subhead">Glasswasher Repairs</h2>
             <p>
 			      We repair all the major brands, including Classeq, DC, Hobart, Maidaid, Prodis and Winterhalter Glasswashers.  Our aim is to have your kitchen equipment working perfectly and as soon as possible. 
