add analytics conversion js and 4 snippets on call button

--- a/service-contract.html
+++ b/service-contract.html
@@ -37,6 +37,36 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 </head>
 <body>
 
+<script type="text/javascript">
+  /* <![CDATA[ */
+  goog_snippet_vars = function() {
+    var w = window;
+    w.google_conversion_id = 873293832;
+    w.google_conversion_label = "pjKMCLyLrmoQiNC1oAM";
+    w.google_remarketing_only = false;
+  }
+  // DO NOT CHANGE THE CODE BELOW.
+  goog_report_conversion = function(url) {
+    goog_snippet_vars();
+    window.google_conversion_format = "3";
+    var opt = new Object();
+    opt.onload_callback = function() {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  }
+  var conv_handler = window['google_trackConversion'];
+  if (typeof(conv_handler) == 'function') {
+    conv_handler(opt);
+  }
+}
+/* ]]> */
+</script>
+<script type="text/javascript"
+  src="//www.googleadservices.com/pagead/conversion_async.js">
+</script>
+
+
 
 <div id="layout">
     <!-- Menu toggle -->
@@ -81,9 +111,9 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <p>
 Arrange your service contract
 </p>
-<a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
+<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
-<a href="tel:+447810252231">07810252231</a>
+<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231">07810252231</a>
 </div>
 
             <h2 class="content-subhead">Service Contract Advantages</h2>
@@ -156,9 +186,9 @@ A fully comprehensive contract guarantees that all of your equipment is fully wo
 			<p>
 Get your equipment fixed today
 </p>
-<a href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
+<a onClick="goog_report_conversion('tel:07810252999')" href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
-<a href="tel:+447810252231">07810252231</a>
+<a onClick="goog_report_conversion('tel:07810252998')" href="tel:+447810252231">07810252231</a>
 </div>
 
 <br>
