did ad analytics now unianal add events
added adword js snippet and analytics by mistake.  now added normal
analytics event markers

--- a/service-contract.html
+++ b/service-contract.html
@@ -111,9 +111,9 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 <p>
 Arrange your service contract
 </p>
-<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
+<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231" onClick="ga('send', 'event', 'mobile', 'tapclickuni', '07810252231');">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
-<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231">07810252231</a>
+<a onClick="goog_report_conversion('tel:07810252231')" href="tel:+447810252231" onClick="ga('send', 'event', 'mobile', 'tapclickuni', '07810252231');">07810252231</a>
 </div>
 
             <h2 class="content-subhead">Service Contract Advantages</h2>
@@ -182,13 +182,13 @@ A fully comprehensive contract guarantees that all of your equipment is fully wo
 	<img class="pure-img-responsive" src="img/logotce.png" alt="Catering Repair Logo" >
 			
 			
-			<div class="test" align="center" >
+		``	<div class="test" align="center" >
 			<p>
 Get your equipment fixed today
 </p>
-<a onClick="goog_report_conversion('tel:07810252999')" href="tel:+447810252231">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
+<a onClick="goog_report_conversion('tel:07810252999')" href="tel:+447810252231" onClick="ga('send', 'event', 'mobile', 'tapclickuni', '07810252231');">  <img src="img/callbutton.png" alt="Repair Quote Button" ></a>
 <br>
-<a onClick="goog_report_conversion('tel:07810252998')" href="tel:+447810252231">07810252231</a>
+<a onClick="goog_report_conversion('tel:07810252998')" href="tel:+447810252231" onClick="ga('send', 'event', 'mobile', 'tapclickuni', '07810252231');">07810252231</a>
 </div>
 
 <br>
