--- a/service-contract.html
+++ b/service-contract.html
@@ -142,8 +142,8 @@ A parts contract includes all of the above, and covers the costs of any parts re
 A fully comprehensive contract guarantees that all of your equipment is fully working, all the costs of parts and labour are covered by your monthly contract payment.  This gives you a fixed and predictable amount to pay each month.
 </p>	
 
-			 <h2 class="content-subhead">Coverage Area</h2>
-            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan.</p>
+			<h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Burnley, Cheshire, Halifax, Huddersfield, Knutsford, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wilmslow.</p>
 			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
