cheshire change wilmslow knutsford
removed blackburn n wigan

--- a/gas-certificates.html
+++ b/gas-certificates.html
@@ -118,8 +118,8 @@ For an appointment or quote for a Gas Safety Certificate
 			     A Gas Safety Certificate costs £240 for up to six appliances in one kitchen, and £30 for each additional appliance above that.  As a local company with local engineers we can provide a faster service and a lower price than other companies with more overheads. 
 				 
 			 </p>
-			 <h2 class="content-subhead">Coverage Area</h2>
-            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan.</p>
+			<h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Burnley, Cheshire, Halifax, Huddersfield, Knutsford, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wilmslow.</p>
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
 <img class="pure-img-responsive" src="img/coveragemaparea8crop.png"  alt="Coverage Map - Manchester & North West" >
