--- a/glasswasher-repair.html
+++ b/glasswasher-repair.html
@@ -132,8 +132,8 @@ We work at all kinds of commercial premises, including:
 
 
 </ul>			 
-			 <h2 class="content-subhead">Coverage Area</h2>
-            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan..</p>
+			<h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Burnley, Cheshire, Halifax, Huddersfield, Knutsford, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wilmslow.</p>
 			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
