--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
             <p> We repair Falcon Ovens, Lincat Fryers, Rational Combi Ovens, Parry Fryers, Hobart Mixers, Salamander-style Grills, and Classeq & Winterhalter Dishwashers.  Through many years of experience, we have serviced and maintained every one of the commercial catering brands - both big and small. We pride ourselves on providing a reliable, prompt and efficient service for all of our customers in the North West.</p>
 	
 	 
-			 <h2 class="content-subhead">Coverage Area</h2>
-            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan.</p>
+			<h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Burnley, Cheshire, Halifax, Huddersfield, Knutsford, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wilmslow.</p>
 			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
