--- a/oven-repair.html
+++ b/oven-repair.html
@@ -98,8 +98,8 @@ You need a range or oven repair now?
   <li type="square">Oven is powered on, but is not cooking food</li>
   <li type="square">Oven is on but not cooking at correct temperature</li>
 </ul>			 
-			 <h2 class="content-subhead">Coverage Area</h2>
-            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Bolton, Blackburn, Burnley, Halifax, Huddersfield, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wigan.</p>
+			<h2 class="content-subhead">Coverage Area</h2>
+            <p> All of our engineers are based in or near the Greater Manchester area. We cover Manchester, Burnley, Cheshire, Halifax, Huddersfield, Knutsford, Preston, Rochdale, St. Helens, Salford, Stockport, Warrington and Wilmslow.</p>
 			
 			<div class="pure-g" >
 			 <div class="pure-u-1-1"  >
